# bcpp-snapshots

./: CHANGES  COPYING  MANIFEST  README  VERSION  aclocal.m4  c_count.1  c_count.c  c_count.lsm  config.hin  config_h.in  configure  configure.in  conflict.1  conflict.c  conflict.h  conflict.lsm  descrip.mms  indent.bat  makefile.in  makefile.wnt  msdos.c  os2.c  patchlev.h  run_test.sh  system.h  txtalloc.c  unix.c
code/: .vilerc  anyobj.cpp  anyobj.h  backup.cpp  baseq.cpp  baseq.h  bcpp.cfg  bcpp.cpp  bcpp.h  cb++  cmdline.cpp  cmdline.h  config.cpp  config.h  debug.cpp  execsql.cpp  hanging.cpp  html.cpp  makefile  makefile.in  run-test  stacklis.cpp  stacklis.h  strings.cpp  tabs.cpp  verbose.cpp
package/: bcpp.spec  c_count.nsi  c_count.spec  conflict.spec
package/debian/: changelog  control  copyright  rules  watch
porting/: README  getopt.c  makefile.wnt  turboc.mak  vmsbuild.com  vmsshare.opt  wildcard.c
testing/: Makefile  README  cat.ref  descrip.mms  history.ref  list.ref  normal.ref  quotes.ref  run_test.bat  run_test.dcl  run_test.sh  showdiff.bat  showdiff.sh  table.ref  table_p.ref  test1.c  test2.c  test3.c
txtdocs/: bcpp.1  manual.txt
unix/: makefile
unix/util/: convert.cc
win32/: conflict.mak  dirent.c  dirent.h
wpdocs/: manual.doc
