dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.11 2024/09/17 22:15:06 tom Exp $
dnl ---------------------------------------------------------------------------
dnl Copyright 2002-2023,2024 -- Thomas E. Dickey
dnl
dnl Permission is hereby granted, free of charge, to any person obtaining a
dnl copy of this software and associated documentation files (the
dnl "Software"), to deal in the Software without restriction, including
dnl without limitation the rights to use, copy, modify, merge, publish,
dnl distribute, distribute with modifications, sublicense, and/or sell
dnl copies of the Software, and to permit persons to whom the Software is
dnl furnished to do so, subject to the following conditions:
dnl 
dnl The above copyright notice and this permission notice shall be included
dnl in all copies or portions of the Software.
dnl 
dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
dnl OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
dnl MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
dnl IN NO EVENT SHALL THE ABOVE COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
dnl DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
dnl OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
dnl THE USE OR OTHER DEALINGS IN THE SOFTWARE.
dnl 
dnl Except as contained in this notice, the name(s) of the above copyright
dnl holders shall not be used in advertising or otherwise to promote the
dnl sale, use or other dealings in this Software without prior written
dnl authorization.
dnl
dnl see
dnl https://invisible-island.net/autoconf/ 
dnl ---------------------------------------------------------------------------
AC_PREREQ(2.52.20240618)
AC_REVISION($Revision: 1.11 $)

AC_INIT(code/bcpp.cpp)
AC_CONFIG_HEADER(code/autoconf.h:config_h.in)
CF_CHECK_CACHE

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_LANG_CPLUSPLUS
AC_EXEEXT
AC_OBJEXT

AC_PROG_EGREP
AC_PROG_FGREP
CF_PROG_LN_S

CF_DISABLE_ECHO
CF_GXX_WARNINGS

AC_CHECK_DECL(exit)

AC_OUTPUT(makefile code/makefile,,,cat)
